--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@
 	height: 3px;
 	margin: 5px;
 	background-color: white;
+	transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 768px) {
@@ -71,7 +72,11 @@
 		align-items: center;
 		justify-content: space-around;
 		transform: translateX(100%);
-		transition: transform 2s ease-in;
+		transition: transform 0.5s ease-in;
+	}
+
+	.nav-links li {
+		opacity: 0;
 	}
 
 	.burger {
@@ -81,4 +86,27 @@
 
 .nav-active {
 	transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+	from {
+		opacity: 0;
+		transform: translateX(50%);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+.burger-active .line1 {
+	transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.burger-active .line2 {
+	opacity: 0;
+}
+
+.burger-active .line3 {
+	transform: rotate(45deg) translate(-5px, -6px);
 }
